#1530 Utilizing readonly mode on the mapping to reduce downtime while doing a release

--- a/.github/workflows/deploy_mapping.yml
+++ b/.github/workflows/deploy_mapping.yml
@@ -17,9 +17,12 @@ jobs:
           username: ${{ secrets.DEPLOY_USERNAME }}
           key: ${{ secrets.DEPLOY_PRIVATE_KEY }}
           script: cd /var/www/html/keystone.guru.mapping/;
+            php artisan readonly:enable &&
+            php artisan mapping:sync --force=true &&
+            php artisan db:backup;
             php artisan up;
             php artisan down --render="errors::503" --retry 60;
-            php artisan mapping:sync --force=true &&
             php artisan environment:updateprepare mapping &&
             php artisan environment:update mapping;
+            php artisan readonly:disable &&
             php artisan up
