#1530 Now performing backup before the mapping:sync just in case

--- a/.github/workflows/deploy_mapping.yml
+++ b/.github/workflows/deploy_mapping.yml
@@ -18,8 +18,8 @@ jobs:
           key: ${{ secrets.DEPLOY_PRIVATE_KEY }}
           script: cd /var/www/html/keystone.guru.mapping/;
             php artisan readonly:enable &&
-            php artisan mapping:sync --force=true &&
-            php artisan db:backup;
+            php artisan db:backup &&
+            php artisan mapping:sync --force=true;
             php artisan up;
             php artisan down --render="errors::503" --retry 60;
             php artisan environment:updateprepare mapping &&
