--- a/database/seeders/dungeondata/mapping_versions.json
+++ b/database/seeders/dungeondata/mapping_versions.json
@@ -952,5 +952,14 @@
         "created_at": "2023-04-11T15:15:54.000000Z",
         "updated_at": "2023-04-11T15:15:54.000000Z",
         "merged": false
+    },
+    {
+        "id": 107,
+        "dungeon_id": 8,
+        "version": 2,
+        "mdt_mapping_hash": "",
+        "created_at": "2023-04-12T10:07:27.000000Z",
+        "updated_at": "2023-04-12T10:07:27.000000Z",
+        "merged": false
     }
 ]
